@@ -1,3 +1,8 @@
+1999-06-17  Anthony Green  <green@cygnus.com>
+
+	* mach_dep.c (GC_push_regs): FreeBSD-elf support (from
+	Carlo Dapor <carlo@vis.ethz.ch>).
+
 1999-05-05  Gilles Zunino  <Gilles.Zunino@hei.fr>
 
 	* configure.in: Switch from irix threads to posix threads
